--- a/MyProjects/pom.xml
+++ b/MyProjects/pom.xml
@@ -36,10 +36,17 @@
 			<version>3.0.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.141.5</version>
+		</dependency>
+
 	</dependencies>
-	
+
 	<build>
-	
+
 	</build>
 
 </project>
