Fixed extent reporting issues

--- a/MyProjects/pom.xml
+++ b/MyProjects/pom.xml
@@ -15,6 +15,7 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+		<!-- This dependency is used for FileUtils to take the screenshots -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
