added scenario-3 test cases as well.

--- a/MyProjects/src/main/resources/properties/UiTests.properties
+++ b/MyProjects/src/main/resources/properties/UiTests.properties
@@ -1,8 +1,33 @@
-Grid=y
+Grid=n
 env=
 browser=chrome
 url=
 ExtentReportPath=C:\\Reports\\
-UserName=
-Password=
-UserEmail=
+
+#--------------URLs------------------
+PortalUrl=http://automationpractice.com/index.php
+#--------YOUR PERSONAL INFO Section---------
+FirstName=Ramandeep
+LastName=Singh
+Password=Ramandeep@123
+#--------YOUR ADDRESS Section---------
+Company=ACN GMBH
+Address1=36 Lersner Strasse,
+Address2=Frankfurt, 60326
+City=Frankfurt
+State=Arizona
+PostalCode=60326
+AdditionalInfo=Creating testing framework for GFK
+MobilePhone=+91 9860633119
+Alias=Sanny
+#-------------Verification key/values--------
+ConfirmationAppUrl=?controller=my-account
+UserName=Ramandeep Singh
+SignOutLinkText=Sign out
+HeaderMyAccountText=MY ACCOUNT
+WelcomeText=Welcome to your account. Here you can manage all of your personal information and orders.
+OrderConfirmUrl=?controller=order-confirmation
+OrderIsCompleteTextMsg=Your order on My Store is complete.
+ClassPropertyValue=step_current last
+#----------------ALREADY REGISTERED Section-------------
+AlreadyRegisteredEmail=username30578@gmail.com
